--- a/src/css/styles/mq/desktop-mq.css
+++ b/src/css/styles/mq/desktop-mq.css
@@ -1,93 +1,93 @@
 @media screen and (min-width: 60em) {
-  body {
-    width: 55%;
-  }
+    body {
+        width: 55%;
+    }
 
-  /* menu styles start */
-  header {
-    padding-bottom: 2em;
-  }
+    /* menu styles start */
+    header {
+        padding-bottom: 2em;
+    }
 
-  .header_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    .header_container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-  .header.header__text {
-    min-width: 28em;
-    padding: 0px 20px 0 10px;
-    margin-top: 1.1em;
-  }
+    .header.header__text {
+        min-width: 28em;
+        padding: 0px 20px 0 10px;
+        margin-top: 1.1em;
+    }
 
-  .menu_tab {
-    display: none;
-  }
+    .menu_tab {
+        display: none;
+    }
 
-  .menu__item {
-    padding: 0px 20px 0px 0px;
-    font-size: 1rem;
-    font-weight: 700;
-  }
+    .menu__item {
+        padding: 0px 20px 0px 0px;
+        font-size: 1rem;
+        font-weight: 700;
+    }
 
-  .desktop__menu {
-    margin-top: 2.1em;
-  }
+    .desktop__menu {
+        margin-top: 2.1em;
+    }
 
-  li.menu.menu__item {
-    margin: 0px -8px 0px 0px;
-  }
+    li.menu.menu__item {
+        margin: 0px -8px 0px 0px;
+    }
 
-  /* menu styles end */
+    /* menu styles end */
 
-  .title {
-    padding: 20px 0px 20px 0px;
-    flex-direction: row;
-    justify-content: left;
-  }
+    .title {
+        padding: 20px 0px 20px 0px;
+        flex-direction: row;
+        justify-content: left;
+    }
 
-  .snippet.snippet__section {
-    min-width: 40em;
-  }
+    .snippet.snippet__section {
+        min-width: 40em;
+    }
 
-  /* single page styles */
-  .snippet__title,
-  .single_title,
-  .pub_date {
-    line-height: 0px;
-  }
+    /* single page styles */
+    .snippet__title,
+    .single_title,
+    .pub_date {
+        line-height: 0px;
+    }
 
-  .single__content,
-  .relatedPost {
-    font-size: 1.25rem;
-  }
+    .single__content,
+    .relatedPost {
+        font-size: 1.25rem;
+    }
 
-  /* quicktips */
+    /* quicktips */
 
-  section.reminder {
-    border: 10px solid #f60c80;
-  }
+    /* section.reminder {
+      border: 10px solid #f60c80;
+    } */
 
-  .cards_container {
-    display: grid;
-    grid-template-columns: 66% auto;
-    padding: 4em 1em;
-  }
-  
-  ul.cards {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    list-style-type: none;
-    grid-template-columns: repeat(2, auto);
-  }
-  
-  ul.cards.li {
-    padding: 2em;
-  }
-  
-  li.snippet.snippet__section.card {
-    min-width: 25em;
-    margin: 0em 6em 3em 0em;
-  }
+    .cards_container {
+        display: grid;
+        grid-template-columns: 66% auto;
+        padding: 4em 1em;
+    }
+
+    ul.cards {
+        margin: 0;
+        padding: 0;
+        display: grid;
+        list-style-type: none;
+        grid-template-columns: repeat(2, auto);
+    }
+
+    ul.cards.li {
+        padding: 2em;
+    }
+
+    li.snippet.snippet__section.card {
+        min-width: 25em;
+        margin: 0em 6em 3em 0em;
+    }
 }
