--- a/src/css/styles/mq/desktop-mq.css
+++ b/src/css/styles/mq/desktop-mq.css
@@ -64,9 +64,9 @@
 
     /* quicktips */
 
-    /* section.reminder {
+    section.reminder {
       border: 10px solid #f60c80;
-    } */
+    }
 
     .cards_container {
         display: grid;
