--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -62,7 +62,7 @@ code {
     padding: 0.2em;
 }
 
-/* blockquote {
+blockquote {
     color: #65d1e9;
     background-color: #f5f5f5;
     padding: 1em;
@@ -79,7 +79,7 @@ blockquote:before {
     line-height: 0.2em;
     margin-right: 0.25em;
     vertical-align: -0.4em;
-} */
+}
 
 blockquote p {
     display: inline;
@@ -116,7 +116,7 @@ a:active.snippet__more {
 
 /* end base styles */
 
-/* .title {
+.title {
     display: flex;
     padding: 0px;
     flex-direction: column;
@@ -168,7 +168,7 @@ a:visited.snippet__section.snippet__title {
     border-bottom: 0.12em solid #9cdded;
     color: #f60c80;
     outline: none;
-    font-weight: 400;
+    font-weight: 700;
     display: inline-block;
     line-height: 0.8;
     text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
@@ -197,7 +197,9 @@ a:visited.header.header__title {
 a:active.header.header__title,
 a:hover.header.header__title {
     background-color: rgba(255, 255, 255, 0);
-} */
+}
+
+*/
 
 footer {
     flex-shrink: 0;
@@ -214,11 +216,9 @@ footer > p {
     margin: 0px;
 }
 
-/* 
 footer,
 time,
 .header__text,
-.snippet__summary,
 .snippet__more,
 .single__content,
 .snippet__date,
@@ -226,6 +226,12 @@ time,
 .pagination,
 .relatedPost {
     font-size: 1rem;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
+}
+
+.snippet__summary {
+    font-size: 1.25rem;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
 }
@@ -262,7 +268,7 @@ footer,
 
 .pagination {
     font-size: 1.3rem;
-} */
+}
 
 /* menu styles start */
 
@@ -270,13 +276,13 @@ input {
     display: none;
 }
 
-/* .menu__item {
+.menu__item {
     font-size: 2rem;
     padding: 20px;
     font-variant: all-small-caps;
     font-family: 'Fira Sans', sans-serif;
 }
-*/
+
 .menu_tab {
     margin-top: 1em;
     position: fixed;
@@ -386,7 +392,7 @@ input {
 
 /* single page styles */
 
-/* .single__title {
+.single__title {
     line-height: 1em;
 }
 
@@ -401,7 +407,7 @@ li.single__title {
     text-decoration: none;
     color: #f60c80;
     outline: none;
-    font-weight: 400;
+    font-weight: 700;
     text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
 }
 
@@ -414,6 +420,6 @@ section.reminder {
     background-color: #f5f5f5;
     padding: 2em;
     border: 4px solid #f60c80;
-} */
+}
 
 /* single page end */
