--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -103,6 +103,7 @@ a:visited.snippet__more {
     display: inline-block;
     line-height: 1.05;
     border-bottom: 0.18em solid rgba(255, 225, 0, 0.88);
+    margin-bottom: 0.5em;
 }
 
 a:hover,
@@ -220,20 +221,24 @@ footer,
 time,
 .header__text,
 .snippet__more,
-.single__content,
 .snippet__date,
 .single__date,
-.pagination,
-.relatedPost {
+.pagination {
     font-size: 1rem;
     font-family: 'Fira Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
+}
+
+.single__content, .relatedPost {
+    font-size: 1.4rem;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 200;
 }
 
 .snippet__summary {
-    font-size: 1.25rem;
+    font-size: 1.4rem;
     font-family: 'Fira Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
 }
 
 footer,
@@ -244,7 +249,7 @@ footer,
 .snippet__date,
 .single__date,
 .pagination {
-    line-height: 1.9em;
+    line-height: 1.7em;
 }
 
 .twitter {
